客側API実装
